# shone

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindAubio.cmake  FindRubberband.cmake
include/shone/: AudioBuffer.hpp  AudioFile.hpp  Defaults.hpp  Downmix.hpp  Mix.hpp  MusicalNote.hpp  PitchSegment.hpp  RubberbandHelper.hpp  SndFileHelper.hpp
include/shone/core/: AudioBuffer.hpp  MidiNote.hpp
include/shone/gui/: MainGui.hpp  MainWindow.hpp  Piano.hpp  PianoRoll.hpp
src/: CMakeLists.txt  Main.cpp
src/core/: AudioBuffer.cpp  AudioBuffer.hpp  AudioFile.cpp  AudioFile.hpp  AudioFrame.cpp  AudioFrame.hpp  Downmix.cpp  MidiNote.cpp  Mix.cpp  Mix.hpp  MusicalNote.cpp  PitchAnalyzer.cpp  PitchAnalyzer.hpp  PitchSegment.cpp  PitchSegment.hpp  RubberbandHelper.cpp  RubberbandHelper.hpp  SndFileHelper.cpp  SndFileHelper.hpp  StereoFrame.hpp
src/gui/: MainGui.cpp  MainWindow.cpp  Piano.cpp  PianoRoll.cpp
tests/: CMakeLists.txt  ReadAudioFile.cpp  StretchOneSemitone.cpp
